fixed the index button carousel overlap

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1187,6 +1187,7 @@ p{line-height: 25px;}
     position: fixed;
     bottom: 0;
     right: 0px;
+    z-index: 1000;
 }
 
 .fa-plus:before{
